fixed gap question gaps not aligning correctly in safari browsers

--- a/public/css/app_pdf.css
+++ b/public/css/app_pdf.css
@@ -735,6 +735,38 @@ button.cta-button:disabled, a.cta-button:disabled {
     background-color: #929daf;
     padding: 0.4rem 0.3rem;
 }
+
+.resizers .resizer{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%; /*magic to turn square into circle*/
+    position: absolute;
+}
+.resizers .resizer.top-left {
+    left: -5px;
+    top: -5px;
+    cursor: nwse-resize; /*resizer cursor*/
+}
+.resizers .resizer.top-right {
+    right: -5px;
+    top: -5px;
+    cursor: nesw-resize;
+}
+.resizers .resizer.bottom-left {
+    left: -5px;
+    bottom: -5px;
+    cursor: nesw-resize;
+}
+.resizers .resizer.bottom-right {
+    right: -5px;
+    bottom: -5px;
+    cursor: nwse-resize;
+}
+
+.questionContainer .completion-question-container p > *,
+.questionContainer .completion-question-overview-container p > * {
+    vertical-align: middle;
+}
 .form-input {
     padding: 0 10px 0 10px;
     height: 40px;
@@ -3750,6 +3782,10 @@ input[type=number] {
     top: calc(50% - 5px);
 }
 
+.custom-choices .choices__list .choices__item.child {
+    margin-left: 30px;
+}
+
 :root {
     --cta-primary: #3ab753;
     --cta-primary-mid-dark: #27973D;
@@ -5005,11 +5041,11 @@ video {
   left: 0px;
   right: 0px;
 }
-.left-0{
-  left: 0px;
-}
 .right-0{
   right: 0px;
+}
+.left-0{
+  left: 0px;
 }
 .top-0{
   top: 0px;
@@ -5061,6 +5097,9 @@ video {
 }
 .top-10{
   top: 2.5rem;
+}
+.left-10{
+  left: 2.5rem;
 }
 .top-5{
   top: 1.25rem;
@@ -5239,14 +5278,14 @@ video {
 .float-right{
   float: right;
 }
+.m-1{
+  margin: 0.25rem;
+}
 .m-4{
   margin: 1rem;
 }
 .-m-1{
   margin: -0.25rem;
-}
-.m-1{
-  margin: 0.25rem;
 }
 .mx-8{
   margin-left: 2rem;
@@ -5487,6 +5526,9 @@ video {
 .-mt-1{
   margin-top: -0.25rem;
 }
+.box-border{
+  box-sizing: border-box;
+}
 .block{
   display: block;
 }
@@ -5523,6 +5565,12 @@ video {
 .hidden{
   display: none;
 }
+.h-1{
+  height: 0.25rem;
+}
+.h-2{
+  height: 0.5rem;
+}
 .h-12{
   height: 3rem;
 }
@@ -5540,9 +5588,6 @@ video {
 }
 .h-2\.5{
   height: 0.625rem;
-}
-.h-2{
-  height: 0.5rem;
 }
 .h-\[22px\]{
   height: 22px;
@@ -5629,9 +5674,6 @@ video {
 .h-1\.5{
   height: 0.375rem;
 }
-.h-1{
-  height: 0.25rem;
-}
 .h-12\.5{
   height: 3.125rem;
 }
@@ -5689,6 +5731,21 @@ video {
 .w-full{
   width: 100%;
 }
+.w-5{
+  width: 1.25rem;
+}
+.w-4{
+  width: 1rem;
+}
+.w-3{
+  width: 0.75rem;
+}
+.w-2{
+  width: 0.5rem;
+}
+.w-1{
+  width: 0.25rem;
+}
 .w-1\/2{
   width: 50%;
 }
@@ -5700,12 +5757,6 @@ video {
 }
 .w-0{
   width: 0px;
-}
-.w-5{
-  width: 1.25rem;
-}
-.w-4{
-  width: 1rem;
 }
 .w-56{
   width: 14rem;
@@ -5721,9 +5772,6 @@ video {
 }
 .w-1\.5{
   width: 0.375rem;
-}
-.w-1{
-  width: 0.25rem;
 }
 .w-\[22px\]{
   width: 22px;
@@ -5793,9 +5841,6 @@ video {
 .w-auto{
   width: auto;
 }
-.w-3{
-  width: 0.75rem;
-}
 .w-20{
   width: 5rem;
 }
@@ -5826,6 +5871,9 @@ video {
 .w-\[44vw\]{
   width: 44vw;
 }
+.w-\[30px\]{
+  width: 30px;
+}
 .w-32{
   width: 8rem;
 }
@@ -5838,8 +5886,8 @@ video {
 .w-14{
   width: 3.5rem;
 }
-.w-2{
-  width: 0.5rem;
+.min-w-\[1rem\]{
+  min-width: 1rem;
 }
 .min-w-\[32px\]{
   min-width: 32px;
@@ -5862,9 +5910,6 @@ video {
 }
 .min-w-\[calc\(10\.375rem\+12px\)\]{
   min-width: calc(10.375rem + 12px);
-}
-.min-w-\[1rem\]{
-  min-width: 1rem;
 }
 .min-w-\[125px\]{
   min-width: 125px;
@@ -6177,20 +6222,20 @@ video {
 .gap-6{
   gap: 1.5rem;
 }
+.gap-1{
+  gap: 0.25rem;
+}
 .gap-4{
   gap: 1rem;
-}
-.gap-2{
-  gap: 0.5rem;
 }
 .gap-2\.5{
   gap: 0.625rem;
 }
+.gap-2{
+  gap: 0.5rem;
+}
 .gap-5{
   gap: 1.25rem;
-}
-.gap-1{
-  gap: 0.25rem;
 }
 .gap-\[15px\]{
   gap: 15px;
@@ -6612,6 +6657,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(219 234 254 / var(--tw-border-opacity));
 }
+.\!border-white{
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity)) !important;
+}
 .bg-gray-500{
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
@@ -6739,12 +6788,12 @@ video {
 .bg-white\/20{
   background-color: rgb(255 255 255 / 0.2);
 }
+.bg-transparent{
+  background-color: transparent;
+}
 .bg-sysbase{
   --tw-bg-opacity: 1;
   background-color: rgb(4 31 116 / var(--tw-bg-opacity));
-}
-.bg-transparent{
-  background-color: transparent;
 }
 .bg-opacity-0{
   --tw-bg-opacity: 0;
@@ -6762,14 +6811,14 @@ video {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.p-1{
+  padding: 0.25rem;
+}
 .p-8{
   padding: 2rem;
 }
 .p-4{
   padding: 1rem;
-}
-.p-1{
-  padding: 0.25rem;
 }
 .p-5{
   padding: 1.25rem;
@@ -6950,11 +6999,11 @@ video {
 .pr-40{
   padding-right: 10rem;
 }
-.pt-40{
-  padding-top: 10rem;
-}
 .pb-40{
   padding-bottom: 10rem;
+}
+.pt-40{
+  padding-top: 10rem;
 }
 .pl-20{
   padding-left: 5rem;
@@ -6998,14 +7047,17 @@ video {
 .pt-8{
   padding-top: 2rem;
 }
+.pt-2{
+  padding-top: 0.5rem;
+}
+.pr-12{
+  padding-right: 3rem;
+}
 .pt-5{
   padding-top: 1.25rem;
 }
 .pb-2\.5{
   padding-bottom: 0.625rem;
-}
-.pt-2{
-  padding-top: 0.5rem;
 }
 .pl-3{
   padding-left: 0.75rem;
@@ -7021,9 +7073,6 @@ video {
 }
 .pl-6{
   padding-left: 1.5rem;
-}
-.pr-12{
-  padding-right: 3rem;
 }
 .pt-\[14px\]{
   padding-top: 14px;
@@ -7200,6 +7249,9 @@ video {
 .leading-5{
   line-height: 1.25rem;
 }
+.leading-none{
+  line-height: 1;
+}
 .leading-relaxed{
   line-height: 1.625;
 }
@@ -7214,6 +7266,10 @@ video {
 }
 .leading-8{
   line-height: 2rem;
+}
+.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(0 77 245 / var(--tw-text-opacity));
 }
 .text-gray-700{
   --tw-text-opacity: 1;
@@ -7261,10 +7317,6 @@ video {
 .text-cta{
   --tw-text-opacity: 1;
   color: rgb(58 183 83 / var(--tw-text-opacity));
-}
-.text-primary{
-  --tw-text-opacity: 1;
-  color: rgb(0 77 245 / var(--tw-text-opacity));
 }
 .text-note{
   --tw-text-opacity: 1;
