--- a/resources/css/test-take.css
+++ b/resources/css/test-take.css
@@ -277,3 +277,8 @@
     bottom: -5px;
     cursor: nwse-resize;
 }
+
+.questionContainer .completion-question-container p > *,
+.questionContainer .completion-question-overview-container p > * {
+    vertical-align: middle;
+}
